style: fix layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
   <div class="site">
     <header>
-      <h1>Eternal September <span class="nobr">— Visual Experience</span></h1>
-      <p>A journal of images we love, curated by us for you &#9774;</p>
+      <h1>Visual Journal</h1>
+      <h2>Curated by Eternal September</h2>
+      <p>An ongoing journal of images we find intriguing and though provoking - curated by us for you &#9774;</p>
     </header>
 
     <main id="feed" class="feed">
