feat: think in good place for now

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div class="site">
     <header>
-      <h1>Visual Journal</h1>
-      <h2>Curated by Eternal September</h2>
-      <p>An ongoing journal of images we find intriguing and though provoking - curated by us for you &#9774;</p>
+      <h1>Visual Research Journal</h1>
+      <h2>Curated by <a href="https://eternal-september.com/">Eternal September</a></h2>
+      <p>An ongoing feed of images we find interesting.</p>
     </header>
 
     <main id="feed" class="feed">
