feat: update meta

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Visual Research Journal</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eternal September — Inspiration Journal</title>
+  <meta name="description" content="Curated by Eternal September">
   <link rel="stylesheet" href="style.css">
   <!-- Inter & IBM Plex Mono fonts -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;700&display=swap" rel="stylesheet">
