--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Curated by Eternal September">
   <link rel="stylesheet" href="style.css">
+
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Visual Research Journal">
+    <meta property="og:description" content="Curated by Eternal September">
+    <meta property="og:image" content="https://eternal-september.com/assets/Eternal-September-Social-Share.png">
+    <!-- <meta property="og:url" content="https://eternal-september.com"> -->
+    <meta property="og:type" content="website">
   <!-- Inter & IBM Plex Mono fonts -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
