feat: add favicon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="website">
   <!-- Inter & IBM Plex Mono fonts -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 </head>
 <body>
   <div class="site">
