feat: update title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Visual Research Journal</title>
+  <title>Visual Research Project</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Curated by Eternal September">
   <link rel="stylesheet" href="style.css">
 
     <!-- Open Graph for social sharing -->
-    <meta property="og:title" content="Visual Research Journal">
+    <meta property="og:title" content="Visual Research Project">
     <meta property="og:description" content="Curated by Eternal September">
     <!-- <meta property="og:image" content="https://eternal-september.com/assets/Eternal-September-Social-Share.png"> -->
     <!-- <meta property="og:url" content="https://eternal-september.com"> -->
@@ -20,7 +20,7 @@
 <body>
   <div class="site">
     <header>
-      <h1>Visual Research Journal</h1>
+      <h1>Visual Research Project</h1>
       <h2>Curated by <a href="https://eternal-september.com/">Eternal September</a></h2>
       <p>An ongoing feed of images we find interesting.</p>
     </header>
