feat: add social share image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph for social sharing -->
     <meta property="og:title" content="Visual Research Project">
     <meta property="og:description" content="Curated by Eternal September">
-    <!-- <meta property="og:image" content="https://eternal-september.com/assets/Eternal-September-Social-Share.png"> -->
+    <meta property="og:image" content="/Users/seanmartin/Development/Eternal-September-Mood-Board/images/image-6.png">
     <!-- <meta property="og:url" content="https://eternal-september.com"> -->
     <meta property="og:type" content="website">
   <!-- Inter & IBM Plex Mono fonts -->
